--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -88,17 +88,25 @@
   background-color: #282828;
 }
 
-.Checkbox {
+.CheckboxContainer {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  padding: 4px 16px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.CheckboxContainer > input {
   height: 16px;
   width: 16px;
   border: 2px solid #8c959b;
   background-color: #212121;
   border-radius: 4px;
 }
-.Checkbox:checked {
+.CheckboxContainer > input:checked {
   background-color: #8c959b;
 }
-.Checkbox:before {
+.CheckboxContainer > input:before {
   content: "";
   display: inline-block;
   transform: rotate(45deg);
@@ -107,6 +115,9 @@
   margin: 0 0 1.2px 5px;
   border-bottom: 2.5px solid #212121;
   border-right: 2.5px solid #212121;
+}
+.CheckboxContainer:hover {
+  background-color: #2b2b2b;
 }
 
 /*# sourceMappingURL=style.module.css.map */
