--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -99,25 +99,38 @@
   }
 }
 
-.Checkbox {
-  height: 16px;
-  width: 16px;
-  border: 2px solid #8c959b;
-  background-color: #212121;
-  border-radius: 4px;
+.CheckboxContainer {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  padding: 4px 16px;
+  cursor: pointer;
+  border-radius: 10px;
 
-  &:checked {
-    background-color: #8c959b;
+  > input {
+    height: 16px;
+    width: 16px;
+    border: 2px solid #8c959b;
+    background-color: #212121;
+    border-radius: 4px;
+
+    &:checked {
+      background-color: #8c959b;
+    }
+
+    &:before {
+      content: '';
+      display: inline-block;
+      transform: rotate(45deg);
+      height: 8px;
+      width: 4px;
+      margin: 0 0 1.2px 5px;
+      border-bottom: 2.5px solid #212121FF;
+      border-right: 2.5px solid #212121FF;
+    }
   }
 
-  &:before {
-    content: '';
-    display: inline-block;
-    transform: rotate(45deg);
-    height: 8px;
-    width: 4px;
-    margin: 0 0 1.2px 5px;
-    border-bottom: 2.5px solid #212121FF;
-    border-right: 2.5px solid #212121FF;
+  &:hover {
+    background-color: #2b2b2b;
   }
 }
