--- a/src/components/main/mainContainer/style.module.css
+++ b/src/components/main/mainContainer/style.module.css
@@ -5,9 +5,9 @@
   display: flex;
   justify-content: center;
   background-repeat: repeat;
-  background-size: 280px;
-  background-color: black;
+  background-size: 425px;
   height: 100vh;
+  width: 100%;
   overflow: hidden;
   left: 0;
 }
@@ -17,7 +17,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.1);
+  background: linear-gradient(-45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.75) 100%);
 }
 
 @media screen and (max-width: 940px) {
