--- a/src/components/main/mainContainer/style.module.scss
+++ b/src/components/main/mainContainer/style.module.scss
@@ -6,9 +6,9 @@
   display: flex;
   justify-content: center;
   background-repeat: repeat;
-  background-size: 280px;
-  background-color: black;
+  background-size: 425px;
   height: 100vh;
+  width: 100%;
   overflow: hidden;
   left: 0;
 
@@ -18,8 +18,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    //background: linear-gradient(300deg, rgba(0,0,0,.8) 0%, rgba(70, 0, 140, 0.2) 50%, rgba(70, 0, 0, 0.6) 100%);
-    background: rgba(0, 0, 0, 0.1);
+    background: linear-gradient(-45deg, rgba(0, 0, 0, .75) 0%, rgba(0, 0, 0, .9) 50%, rgba(0, 0, 0, .75) 100%);
   }
 }
 
