--- a/src/pages/Messenger/style.module.css
+++ b/src/pages/Messenger/style.module.css
@@ -1,15 +1,15 @@
 
-.ChatContainer {
+.MessengerContainer {
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-width: 100%;
+  width: 100%;
   height: 100%;
   transition: 0.3s all ease-in-out;
   position: relative;
   z-index: 5;
 }
-.ChatContainer .MessageBlock {
+.MessengerContainer .MessageBlock {
   position: absolute;
   display: flex;
   align-items: start;
@@ -25,7 +25,7 @@
   max-width: 700px;
   padding: 64px 8px 8px 8px;
 }
-.ChatContainer .SubscribeButton {
+.MessengerContainer .SubscribeButton {
   position: absolute;
   bottom: 15px;
   padding: 16px 28px;
@@ -35,10 +35,10 @@
   border-radius: 10px;
   transition: 0.2s background-color ease-in-out;
 }
-.ChatContainer .SubscribeButton:hover {
+.MessengerContainer .SubscribeButton:hover {
   background-color: #2b2b2b;
 }
-.ChatContainer > :last-child {
+.MessengerContainer > :last-child {
   max-width: 700px;
 }
 
