--- a/src/pages/Messenger/style.module.scss
+++ b/src/pages/Messenger/style.module.scss
@@ -1,10 +1,10 @@
 @use '../../styles/base/_variables.css' as v;
 
-.ChatContainer {
+.MessengerContainer {
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-width: 100%;
+  width: 100%;
   height: 100%;
   transition: .3s all ease-in-out;
   position: relative;
